--- a/odesk/css/styles.css
+++ b/odesk/css/styles.css
@@ -258,6 +258,10 @@ a[data-toggle="collapse"]:focus{
 	margin-bottom:10px;
 	text-align:left;
 }
+.circlehover{
+	color:white;
+	background-color:rgba(50,50,50,.7);
+}
 .circle{
 	margin-right:10px;
 	color:black;
@@ -268,6 +272,7 @@ a[data-toggle="collapse"]:focus{
 	width:30px;
 	border-radius:50px;
 	border:1px solid rgba(150,150,150,.8);
+	transition:background-color .5s ease-in, color .3s ease-out;
 }
 .main-body{
 	margin-bottom:20px;
