--- a/openearth-first-page/css/styles.css
+++ b/openearth-first-page/css/styles.css
@@ -29,7 +29,8 @@
 .Second-page p{
 	color:white;
 	font-size:1.3em;
-	line-height:100px;
+	padding-top:10px;
+	padding-bottom:10px;
 	text-align:center;
 }
 
