--- a/train/css/styles.css
+++ b/train/css/styles.css
@@ -1,318 +1,211 @@
-h1,h2,h3{
+h1,h2,h3,h4,h5{
 	margin:0;
-}
-body{
-	background-color:#3B434E;
-	padding:40px;
-}
-.main{
-	background-color:#FFF;
-}
-.filter-60{
-	filter: brightness(60%);
-    -webkit-filter: brightness(60%);
-    -moz-filter: brightness(60%);
-    -o-filter: brightness(60%);
-    -ms-filter: brightness(60%);
-
-}
-header .navbar-inverse .navbar-nav>li>a{
-	color:#EC766A;
-	font-weight:bold;
-	text-transform:uppercase;
 }
 .navbar{
 	border-radius:0;
 	border:none;
-	padding-right:50px;
+	position:relative;
+}
+.navbar .container{
+	position:relative;
+
+}
+.navbar-brand{
+	position:absolute;
+	right:0;
+	top:20px;
+	background-color:purple;
+}
+
+.navbar-default{
+	background-color:#F2F2F2;
 	padding-left:50px;
-	margin:0;
 }
-.navbar img{
-	border-radius:1px;
-	max-height:20px;
-	border:1px solid rgb(200,200,200);
-	display:inline-block;
+.main-nav.navbar-nav>li{
+	padding:15px;
 }
-header .navbar .dropdown-menu{
-	left:-33px;
+.main-nav.navbar-nav>li>a{
+	padding:0px;
 }
 
-.search-area{
-	padding:40px 20px;
-	background-color:#EC766A;
-	min-height:500px;
-}
-.search-area img{
-	max-height:70px;
-	display:block;
-	margin:20px auto;
-}
-.search-area h2{
-	color:white;
-	padding:10px;
-	text-align:center;
-}
-.search-area p{
-	color:white;
-	text-align:center;
-}
-
-.search-area .form-inline{
-	margin:0 auto;
-}
-
-.search-area i{
-	position:absolute;
-	bottom:-10px;
-	left:-15px;
-	border:2px solid #ED776B;
-	height:28px;
-	line-height:24px;
-	width:28px;
-	border-radius:50px;
-	background-color:white;
-	color:#ED776B;
-	text-align:center;
-}
-
-.search-area a{
-	position:relative;
-	display:inline-block;
-	
-}
-.search-area input{
-	max-width:20%;
-	border-radius:0;
-}
-.search-area input:nth-child(3){
-	padding-left:15px;
-}
-
-.search-area input:nth-child(1),
-.search-area input:nth-child(3){
-	max-width:20%;
-}
-.search-area input:nth-child(1){
-	border-radius:4px 0 0 4px;
-}
-.search-area input:nth-child(6){
-	border-radius:0 4px 4px 0;
-	min-width:100px;
-}
-.search-area .form-inline{
-	padding:0 6%;
-	margin:0;
-}
-.search-area .map{
-	margin-top:50px;
-	min-width:150px;
-	min-height:100px;
-}
-.tickt-info{
-	border-radius:5px 5px 0 0;
-	background-color:#FDF2EE;
-	height:200;
-	width:242px;
-}
-.tickt-info h3{
-	border-radius:5px 5px 0 0;
-	font-size:1.3em;
-	font-weight:bold;
-	padding:10px;
-	text-align:center;
-	background-color:#FDDDD0;
-}
-.tickt-info .tkt-info-body{
-	padding:10px;
-}
-.tickt-info .tkt-info-body h2{
-	padding:5px;
-	font-size:1.6em;
-	text-align:center;
-}
-.tickt-info .tkt-info-body p{
-	padding:2px;
-	margin:0;
-	text-align:center;
-	font-size:.9em;
-	line-height:1.2;
-}
-.tickt-info .tkt-info-body .btn{
-	margin:0 auto;
-	display:block;
-	margin:10px 20px;
-	padding:2px;
-	border-radius:20px;
-}
-.tkt-img h4{
-	position:absolute;
-	font-weight:bold;
-	color:white;
-	left:80px;
-	z-index:100;
-}
-
-.tkt-img{
-	position:relative;
-}
-.tkt-img img{
-
-	width:242px;
-}
-
-.tkt-img img:nth-child(2){
-	border-radius:5px 5px 0 0;
-}
-.row.body-area{
-	margin-top:40px;
-	margin-bottom:40px;
-}
-
-.feedback-area{
-	border-top:10px solid #EC7269;
-	height:500px;
-	background-position:center center;
-	background-repeat:no-repeat;
-	background-size:cover;
-	background-image:url(../images/m1.jpg);
-}
-.feedback-area .layer{
-	border-top:10px solid #EC7269;
-	background-color:rgba(90,90,90,.55);
-	height:100%;
-	width:100%;
-	position:absolute;
-	top:0;
-}
-.section .testimonial{
-	color:white;
-	font-style:italic;
-	background-color:rgba(10,10,10,.8);
-	border-radius:5px;
-	padding:20px;
-	margin-top:20px;
-	margin-bottom:30px;
-
-}
-.section:after{
-	bottom:10px;
-	left:40px;
-	position:absolute;
-	content:"";
-	width: 0; 
-	height: 0; 
-	border-left: 20px solid transparent;
-	border-right: 20px solid transparent; 
-	border-top: 20px solid rgba(10,10,10,.8);
-}
-.section{
-	position:relative;
-}
-.section .name{
-	font-weight:bold;
-	position:absolute;
-	bottom:-10px;
-	left:40px;
-	color:#EDBBAC;
-	font-size:1.1em;
-}
-.second-last{
-	margin-top:-20px;
-}
-.feedback-area h2{
-	color:white;
-	margin:20px;
-	text-align:center;
-}
-.android-app-area img{
-	max-width:200px;
-}
-.android-app-area h3{
-	margin:10px;
-	margin-left:0;
-	margin-top:40px;
-	color:white;
-	font-size:2em;
-	font-weight:bold;
-}
-.android-app-area a{
-	margin-top:10px;
-	margin-right:5px;
-	font-size:1.1em;
-}
-
-.android-app-area i{
-	padding-right:5px;
-	color:white;
-}
-.android-app-area .btn{
-	color:white;
-}
-.android-app-area .btn:hover i{ 
+.main-nav.navbar-nav >li >a{
 	color:black;
 }
-.android-app-area .btn:hover{
-	color:black;
-	background-color:rgba(240,240,240,1);
-	border:1.4px solid rgba(240,240,240,1);
-}
-.android-app-area .btn{
-	border-radius:20px;
-	padding:5px 20px;
+.main-nav.navbar-nav >li.active> a{
+	border-bottom:2px solid #E2001A;
 	background-color:transparent;
-	border:1.4px solid rgba(240,240,240,1);
 }
-.android-app-area{
-	padding-top:20px;
-	background-color:#EC7267;
+.middle-nav.navbar-nav{
+	margin-left:30px;
 }
-.black-text{
-	color:black;
+.middle-nav.nav>li>a{
+	font-size:.9em;
+	color:rgba(100,100,100,.7);
+	padding-left:5px;
+	padding-right:5px;
 }
-.before-footer ul li{
-	padding-bottom:5px;
+
+.main-body{
+	min-height:600px;
+	background-image:url(../images/bg-right.svg);
+	background-position:top right;
+	background-repeat:no-repeat;
+	background-size: 100% auto;
+	margin-top:95px;
 }
-.before-footer ul li a{
-	color:#ED776B;
-	font-weight:bold;
-	font-size:1em;
-	line-height:1.5;
-}
-.before-footer h3{
-	text-align:center;
-	padding:10px;
-}
-.before-footer p{
-	text-align:center;
-	padding-bottom:4px;
-	margin:8px 40px 0;
-	border-bottom:3px solid #ED776B;
-}
-.right-before-footer .btn{
-	margin-top:10px;
-	border-radius:20px;
-	padding:3px 20px;
-	border:1.4px solid rgba(100,100,100,.8);
-}
-.before-footer{
+.main-body div>h1{
+	color:#E2001A;
+	font-size:6.2em;
+	letter-spacing:-1px;
+	text-transform:uppercase;
 	padding-top:30px;
-	padding-bottom:30px;
+	padding-bottom:40px;
+	margin-left:-5px;
 }
-.square-icon{
-	height:25px;
-	width:25px;
-	line-height:25px;
+.main-body div>h3{
+	padding-top:15px;
+	padding-bottom:15px;
+	padding-right:30px;
+	line-height:1.3;
+}
+.main-body div>p{
+	line-height:1.5;
+	padding-right:30px;
+}
+.first-row{
+	position:relative;
+}
+.first-row a.video-link{
+	position:absolute;
+	bottom:20px;
+	color:#E2001A;
+	font-size:1.2em;
+	font-weight:600;
+}
+
+.work-area{
+	margin-top:10px;
+}
+.work-area .row .left-img{
+	padding-left:0;
+
+}
+.work-area .row .left-img img{
+	margin-top:50px;
+}
+.work-area .row div> h3{
+	padding-right:70px;
+}
+.work-area .row div >p{
+	padding-bottom:15px;
+}
+.featured-video{
+	margin-top:20px;
+}
+.featured-video p{
+	width:300px;
+	border-left:1px solid #E2001A;
+	color:#E2001A;
+	margin-bottom:0;
+	/* padding-top:10px; */
+	padding-bottom:50px;
+}
+.featured-video{
+	/* width:40%; */
+	position:relative;
+}
+.featured-video img{
+	display:block;
+	margin:0 auto;
+}
+
+
+.hidden{
+	visibility:hidden;
+}
+.featured-body{
+	padding-top:60px;
+	padding-bottom:60px;
+
+}
+.featured-section{
+	padding-left:0;
+}
+
+.featured-second-section{
+	padding-right:0px;
+}
+.featured-section p{
+	padding:10px;
+	padding-left:60px;
+	border-left:1px dashed #E2001A;	
+}
+.featured-section h4{
+	padding:10px;
+	padding-left:60px;
+	padding-top:30px;
+}
+div.featured-second-section > h4{
+	padding:10px;
+	text-align:right;
+	padding-right:60px;
+	padding-top:30px;
+}
+div.featured-second-section > p{
+	padding-right:60px;
+	text-align:right;
+	border-right:1px dashed #E2001A;	
+}
+.featured:last-child .featured-section > p{
+	border-left:1px solid transparent;
+}
+.featured{
+	position:relative;
+}
+.middle-icon{
+	position:absolute;
+	top:-10px;
+	left:50%;
+	margin-left:-40px;
+	z-index:10;
+}
+.second-middle-icon{
+	position:absolute;
+	top:-10px;
+	left:50%;
+	margin-left:-40px;
+	z-index:10;
+}
+.middle-icon i,.second-middle-icon i{
+	display:block;
+	margin:0 auto;
 	text-align:center;
-	border-radius:2px;
+	background-color:#E2001A;
+	height:80px;
+	line-height:80px;
+	width:80px;
+	border-radius:80px;
+	font-size:3em;
 	color:white;
-	background-color:rgba(10,10,10,.9);
-	font-size:1.1em;
+		
 }
 
-
-
-
+.work-example{
+	padding-top:20px;
+	padding-bottom:20px;
+	background-color:#F2F2F2;
+}
+.work-example h2{
+	padding-top:20px;
+	padding-bottom:20px;
+}
+.work-example p{
+	padding-top:0px;
+	padding-bottom:10px;
+}
+.work-example p i{
+	font-size:3em;
+}
 
 
 
